--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 div {
     color: white;
     background-color: red;
-    font-size: 32;
+    font-size: 32px;
+    font-weight: bold;
+    font-family: "Times New Roman", sans-serif;
+    text-align: center;
 
 }
